fix velocity display

--- a/docker_web/my_webpage/index.html
+++ b/docker_web/my_webpage/index.html
@@ -107,8 +107,8 @@
 						<div class="card-body">
 							<h4 class="text-center">Robot velocity</h4>
 							<hr />
-							<p>Linear: {{ joystick.vertical.toFixed(3) }}</p>
-							<p>Angular: {{ joystick.horizontal.toFixed(3) }}</p>
+							<p>Linear: {{ subs_linear.toFixed(3) }}</p>
+							<p>Angular: {{ subs_angular.toFixed(3) }}</p>
 						</div>
 					</div>
 				</div>
