--- a/docker_web/my_webpage/index.html
+++ b/docker_web/my_webpage/index.html
@@ -49,6 +49,10 @@
 			background-color: lightcoral;
 		}
 
+		nav {
+			background-color: rgb(128, 152, 240);
+		}
+
 	</style>
 
 </head>
@@ -57,37 +61,117 @@
 
 	<!-- header of the page -->
 	<header class="header">
+
 		<div class="container">
 			<div class="jumbotron text-center">
 				<h1>Hello from PUC Minas!</h1>
 				<p>Let's connect our website to a ROS robot!</p>
 			</div>
 		</div>
+
 	</header>
 
 	<!-- main content -->
 	<main id="vueApp">
 
+		<div v-show="show_menu" class="container">
+			<div class="row">
+		
+				<div class="col-md-5 text-right">
+					<h4>Menu</h4>
+				</div>
+		
+				<div class="col-md-4">
+					<div class="btn-group" role="group" aria-label="Basic example">
+						<button @click="btn_teleop" type="button" class="btn btn-secondary">Teleop</button>
+						<button @click="btn_monitore" type="button" class="btn btn-secondary">Monitore</button>
+						<button @click="btn_replay" type="button" class="btn btn-secondary">Replay</button>
+					</div>
+				</div>
+				
+			</div>
+			<hr>
+		</div>
+		
+
 		<div class="container">
 			<div class="row">
 
-				<div class="col-md-4">
+				<div v-show="show_address" class="col-md-4">
 					<div class="card">
 						<div class="card-body">
 							<h4>{{ menu_title }}</h4>
 							<hr>
 							<label>ROSBridge address:</label>
 							<br>
-							<input type="text" v-model="rosbridge_address" />
+							<input type="text" v-show="show_address" v-model="rosbridge_address" />
 							<br>
 							<button class="mt-2 btn btn-success" v-if="connected"
 								@click="disconnect">Connected!</button>
 							<button class="mt-2 btn btn-primary" v-else @click="connect">Connect!</button>
+							<br>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-4">
+				<div v-show="show_options" class="col-md-2">
+					<div class="card">
+						<div class="card-body">
+							<h4>Options</h4>
+							<hr>
+							<button class="mt-2 btn btn-success" v-if="connected"
+								@click="disconnect">Connected!</button>
+							<button class="mt-2 btn btn-primary" v-else @click="connect">Connect!</button>
+							<br>
+							<button class="mt-2 btn btn-success" v-if="recording"
+							@click="stop_record">Stop Record!</button>
+						    <button v-show="show_record" :disabled='recordDisabled' class="mt-2 btn btn-primary" v-else @click="start_record">Record!</button>
+							<br>
+							<button class="mt-2 btn btn-success" v-if="moving"
+							@click="stop_move">Stop Move!</button>
+						    <button v-show="show_move" :disabled='moveDisabled' class="mt-2 btn btn-primary" v-else @click="start_move">Move!</button>
+						</div>
+					</div>
+				</div>
+
+				<div v-show="show_camera" class="col-md-6 text-center">
+					<div class="card">
+						<div class="card-body">
+							<h4>Camera</h4>
+							<hr>
+							<div id="divCamera"></div>
+						</div>
+					</div>
+				</div>
+
+				<div v-show="show_datalogger" class="col-md-4">
+					<div class="card">
+						<div class="card-body">
+							<h4 class="text-center">Datalogger</h4>
+							<hr />
+							<h5 class="text-center">Command Velocity</h5>
+							<p>Linear [m/s]: {{ subs_linear.toFixed(3) }}</p>
+							<p>Angular [rad/s]: {{ subs_angular.toFixed(3) }}</p>
+							<h5 class="text-center">Executed Motion</h5>
+							<p>X [m]: {{ position.x.toFixed(2) }}</p>
+							<p>Y [m]: {{ position.y.toFixed(2) }}</p>
+							<p>Orientation [rad]: {{ orientation.w.toFixed(2) }}</p>
+							<p>Linear Vel [m/s]: {{ lin_vel.x.toFixed(2) }}</p>
+							<p>Angular Vel [rad/s]: {{ ang_vel.z.toFixed(2) }}</p>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row">
+
+				<div class="col-md-2">
+				</div>
+
+				<div v-show="show_joystick" class="col-md-6">
 					<div class="card">
 						<div class="card-body text-center">
 							<h4 class="text-center">Joystick</h4>
@@ -98,62 +182,6 @@
 							<div id="dragstartzone" @mousedown="startDrag" @mousemove="doDrag">
 							</div>
 							<div id="dragCircle" :style="dragCircleStyle"></div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="card">
-						<div class="card-body">
-							<h4 class="text-center">Robot velocity</h4>
-							<hr />
-							<p>Linear: {{ subs_linear.toFixed(3) }}</p>
-							<p>Angular: {{ subs_angular.toFixed(3) }}</p>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-
-
-		<div class="container">
-			<div class="row">
-
-				<div class="col-md-4 text-center">
-					<div class="card">
-						<div class="card-body">
-							<h4>Camera</h4>
-							<hr>
-							<div id="divCamera"></div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="card">
-						<div class="card-body">
-							<h4 class="text-center">Robot position</h4>
-							<hr />
-							<p>X: {{ position.x.toFixed(2) }}</p>
-							<p>Y: {{ position.y.toFixed(2) }}</p>
-							<p>Z: {{ position.z.toFixed(2) }}</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="card">
-						<div class="card-body">
-							<h4>Training</h4>
-							<hr>
-							<button class="mt-2 btn btn-success" v-if="recording"
-							@click="stop_record">Stop Record!</button>
-						    <button :disabled='recordDisabled' class="mt-2 btn btn-primary" v-else @click="start_record">Record!</button>
-							<br>
-							<button class="mt-2 btn btn-success" v-if="moving"
-							@click="stop_move">Stop Move!</button>
-						    <button :disabled='moveDisabled' class="mt-2 btn btn-primary" v-else @click="start_move">Move!</button>
 						</div>
 					</div>
 				</div>
